--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^5.0.2",
     "@polkadot/api": "^9.10.1",
+    "@polkadot/extension-dapp": "^0.44.8",
     "@polkadot/types": "^9.10.2",
     "@polkadot/util": "^10.2.1",
     "@polkadot/util-crypto": "^10.2.1",
